Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/Fg_Ri3152AB/Vendor/Include/ri3152a.h

ViStatus _VI_FUNC ri3152a_query_sweep_freq_stop (ViSession vi,
							   			  ViReal64 *freq);
ViStatus _VI_FUNC ri3152a_set_sweep_freq_raster (ViSession vi,
							   			  ViReal64 freq);
ViStatus _VI_FUNC ri3152a_query_sweep_freq_raster (ViSession vi,
							   			  ViReal64 *freq);
ViStatus _VI_FUNC ri3152a_set_sweep_freq_marker (ViSession vi,
							   			  ViReal64 marker);
ViStatus _VI_FUNC ri3152a_query_sweep_freq_marker (ViSession vi,
							   			  ViReal64 *marker);
ViStatus _VI_FUNC ri3152a_sweep_function  (ViSession vi,
                                          		ViInt16 function_type);
ViStatus _VI_FUNC ri3152a_sweep_func_query (ViSession vi,
                            		 ViInt16 *function_type);
ViStatus _VI_FUNC ri3152a_set_sweep_spacing (ViSession vi,
							   			  ViBoolean mode);
ViStatus _VI_FUNC ri3152a_query_sweep_spacing (ViSession vi,
							   			  ViBoolean *mode);
ViStatus _VI_FUNC ri3152a_set_sine_wave_phase (ViSession vi,  ViInt16 phase);
ViStatus _VI_FUNC ri3152a_load_segment_binary (ViSession vi,
											 ViInt16 num_segments,
											 ViAInt32 wavesize);