Source/Core/Source/Drivers/FG/include/ri3152a.bas

Declare Function ri3152a_query_sweep_freq_stop& Lib "ri3152a_32.dll" ( ByVal x1&, x2#)
Declare Function ri3152a_set_sweep_freq_raster& Lib "ri3152a_32.dll" ( ByVal x1&, ByVal x2#)
Declare Function ri3152a_query_sweep_freq_raster& Lib "ri3152a_32.dll" ( ByVal x1&, x2#)
Declare Function ri3152a_set_sweep_freq_marker& Lib "ri3152a_32.dll" ( ByVal x1&, ByVal x2#)
Declare Function ri3152a_query_sweep_freq_marker& Lib "ri3152a_32.dll" ( ByVal x1&, x2#)
Declare Function ri3152a_sweep_function& Lib "ri3152a_32.dll" ( ByVal x1&, ByVal x2%)
Declare Function ri3152a_sweep_func_query& Lib "ri3152a_32.dll" ( ByVal x1&, x2%)
Declare Function ri3152a_set_sweep_spacing& Lib "ri3152a_32.dll" ( ByVal x1&, ByVal x2%)
Declare Function ri3152a_query_sweep_spacing& Lib "ri3152a_32.dll" ( ByVal x1&, x2%)
Declare Function ri3152a_set_sine_wave_phase& Lib "ri3152a_32.dll" ( ByVal x1&, ByVal x2%)
Declare Function ri3152a_load_segment_binary& Lib "ri3152a_32.dll" ( ByVal x1&, ByVal x2%, x3&)
